--- a/app/src/main/res/layout/activity_special_calculation.xml
+++ b/app/src/main/res/layout/activity_special_calculation.xml
@@ -10,10 +10,13 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/total"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView17"
+        app:layout_constraintEnd_toStartOf="@+id/totalCostEdit"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView27" />
 
@@ -32,20 +35,22 @@
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         android:text="@string/currency"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@id/textView11"
-        app:layout_constraintLeft_toRightOf="@id/totalCostEdit" />
+        app:layout_constraintEnd_toStartOf="@+id/textView15"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintRight_toLeftOf="@id/totalCostEdit"
+        app:layout_constraintStart_toEndOf="@+id/totalCostEdit" />
 
     <TextView
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
         android:text="@string/discount"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@id/textView11"
+        app:layout_constraintEnd_toStartOf="@+id/discountEdit2"
         app:layout_constraintLeft_toRightOf="@id/textView14" />
 
     <EditText
@@ -57,16 +62,18 @@
         android:text="0"
         android:textAlignment="textEnd"
         app:layout_constraintBaseline_toBaselineOf="@id/textView11"
+        app:layout_constraintEnd_toStartOf="@+id/textView16"
         app:layout_constraintLeft_toRightOf="@id/textView15" />
 
     <TextView
         android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
         android:text="@string/currency"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@id/textView11"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toRightOf="@id/discountEdit2" />
 
     <TextView
@@ -75,10 +82,10 @@
         android:layout_height="wrap_content"
         android:text="@string/number_participants"
         android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@id/textView11"
+
         app:layout_constraintBottom_toTopOf="@+id/textView19"
- />
+        app:layout_constraintLeft_toLeftOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@id/textView11" />
 
     <TextView
         android:id="@+id/numMember2"
@@ -88,6 +95,7 @@
         android:text="0"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@id/textView17"
+        app:layout_constraintEnd_toStartOf="@+id/textView18"
         app:layout_constraintLeft_toRightOf="@id/textView17"
         app:layout_constraintStart_toEndOf="@+id/textView17" />
 
@@ -95,14 +103,13 @@
         android:id="@+id/addParticipant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_marginLeft="10dp"
         android:onClick="onClickAddParticipantButton"
         android:text="@string/register_participants"
-
         app:layout_constraintBottom_toBottomOf="@id/textView18"
         app:layout_constraintLeft_toRightOf="@id/textView18"
-        app:layout_constraintTop_toTopOf="@id/textView18"
-        />
+        app:layout_constraintTop_toTopOf="@id/textView18" />
 
     <TextView
         android:id="@+id/textView19"
@@ -125,9 +132,9 @@
         android:inputType="number"
         android:text="0"
         android:textAlignment="textEnd"
+        app:layout_constraintBottom_toTopOf="@+id/specialEdit2"
         app:layout_constraintEnd_toEndOf="@id/specialEdit3"
         app:layout_constraintTop_toBottomOf="@id/textView19"
-        app:layout_constraintBottom_toTopOf="@+id/specialEdit2"
 
         />
 
@@ -135,29 +142,23 @@
         android:id="@+id/spSpinner1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
         android:layout_marginTop="240dp"
-        android:layout_marginBottom="247dp"
         android:entries="@array/specialAccount"
         android:prompt="@string/special"
         android:spinnerMode="dropdown"
         app:layout_constraintBaseline_toBaselineOf="@id/specialEdit1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/spSpinner3"
-        app:layout_constraintStart_toEndOf="@+id/specialEdit1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/nSpecial1"
         android:layout_width="11dp"
         android:layout_height="22dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="43dp"
         android:text="0"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@id/specialEdit1"
-        app:layout_constraintBottom_toTopOf="@+id/nSpecial2"
-        app:layout_constraintStart_toEndOf="@+id/spSpinner1" />
+        app:layout_constraintLeft_toLeftOf="@id/nSpecial3" />
 
     <Button
         android:id="@+id/addAppliedButton1"
@@ -175,42 +176,33 @@
         android:id="@+id/specialEdit2"
         android:layout_width="70dp"
         android:layout_height="45dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginBottom="170dp"
         android:ems="10"
         android:inputType="number"
         android:text="0"
         android:textAlignment="textEnd"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/specialEdit3"
         app:layout_constraintEnd_toEndOf="@id/specialEdit3"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/specialEdit1" />
 
     <Spinner
         android:id="@+id/spSpinner2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginBottom="182dp"
         android:entries="@array/specialAccount"
         android:prompt="@string/special"
         android:spinnerMode="dropdown"
         app:layout_constraintBaseline_toBaselineOf="@id/specialEdit2"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/spSpinner3"
-        app:layout_constraintStart_toEndOf="@+id/specialEdit2" />
+        app:layout_constraintEnd_toEndOf="@id/spSpinner3" />
 
     <TextView
         android:id="@+id/nSpecial2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginBottom="180dp"
         android:text="0"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@id/specialEdit2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/spSpinner2"
+        app:layout_constraintLeft_toLeftOf="@id/nSpecial3"
         tools:layout_constraintEnd_toEndOf="@id/nSpecial3" />
 
     <Button
@@ -235,6 +227,7 @@
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@id/specialEdit3"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/textView23"
         app:layout_constraintStart_toEndOf="@+id/spSpinner3" />
 
     <EditText
@@ -242,12 +235,14 @@
         android:layout_width="70dp"
         android:layout_height="45dp"
         android:layout_marginStart="21dp"
+        android:layout_marginEnd="3dp"
         android:layout_marginBottom="100dp"
         android:ems="10"
         android:inputType="number"
         android:text="0"
         android:textAlignment="textEnd"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/spSpinner3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/specialEdit2" />
 
@@ -256,12 +251,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="3dp"
-        android:layout_marginBottom="51dp"
+        android:layout_marginEnd="23dp"
         android:entries="@array/specialAccount"
         android:prompt="@string/special"
         android:spinnerMode="dropdown"
         app:layout_constraintBaseline_toBaselineOf="@id/specialEdit3"
         app:layout_constraintBottom_toTopOf="@+id/calculateButton"
+        app:layout_constraintEnd_toStartOf="@+id/textView23"
         app:layout_constraintStart_toEndOf="@+id/specialEdit3" />
 
 
@@ -269,24 +265,24 @@
         android:id="@+id/addAppliedButton3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
+        android:layout_marginEnd="16dp"
         android:onClick="onClickAddAppliedButton3"
         android:text="@string/select_applier"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@id/textView23"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/textView23"
-        app:layout_constraintTop_toTopOf="@id/textView23"
-        />
+        app:layout_constraintTop_toTopOf="@id/textView23" />
 
     <Button
         android:id="@+id/calculateButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
         android:layout_marginBottom="16dp"
         android:onClick="onClickCalculateButton"
         android:text="@string/calculation"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/callTempButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/specialEdit3" />
 
@@ -296,22 +292,22 @@
         android:layout_height="wrap_content"
         android:onClick="onClickCallTempButton"
         android:text="@string/call_temp_saved"
-        app:layout_constraintTop_toTopOf="@id/calculateButton"
-        tools:layout_constraintBottom_toBottomOf="@id/calculateButton"
-        tools:layout_editor_absoluteX="233dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginRight="20dp"
-        />
+        app:layout_constraintStart_toEndOf="@+id/calculateButton"
+        app:layout_constraintTop_toTopOf="@id/calculateButton"
+        tools:layout_constraintBottom_toBottomOf="@id/calculateButton" />
 
     <TextView
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="2dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginEnd="9dp"
         android:text="@string/how_to_count_member"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@id/textView17"
-        app:layout_constraintLeft_toRightOf="@id/numMember2" />
+        app:layout_constraintEnd_toStartOf="@+id/addParticipant"
+        app:layout_constraintStart_toEndOf="@id/numMember2" />
 
     <TextView
         android:id="@+id/textView21"
@@ -344,6 +340,7 @@
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@id/specialEdit3"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/addAppliedButton3"
         app:layout_constraintStart_toEndOf="@+id/nSpecial3" />
 
     <TextView
