--- a/app/src/main/res/layout/activity_add_member.xml
+++ b/app/src/main/res/layout/activity_add_member.xml
@@ -11,8 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="29dp"
+        android:layout_marginBottom="42dp"
         android:text="@string/add_member"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/nameEdit1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,6 +23,8 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/name"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@id/textView6"
@@ -31,19 +35,22 @@
         android:id="@+id/nameEdit1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
         android:ems="10"
         android:hint="@string/hint_edit_name"
         android:inputType="textPersonName"
         android:text=""
         app:layout_constraintBaseline_toBaselineOf="@id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.14"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintStart_toStartOf="@id/positionSpinner1"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:text="@string/group"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@id/textView7"
@@ -56,8 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         app:layout_constraintBaseline_toBaselineOf="@id/textView6"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintStart_toStartOf="@id/positionSpinner1"
+        app:layout_constraintStart_toStartOf="@id/nameEdit1"
         app:layout_constraintTop_toBottomOf="@+id/nameEdit1" />
 
     <TextView
@@ -65,6 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
+        android:layout_marginTop="10dp"
         android:text="@string/position"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@id/registerButton"
@@ -77,17 +84,16 @@
         android:layout_height="wrap_content"
 
         android:layout_alignBottom="@+id/textView7"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="96dp"
         app:layout_constraintBaseline_toBaselineOf="@id/textView7"
-        app:layout_constraintLeft_toRightOf="@id/textView7"
+        app:layout_constraintStart_toStartOf="@id/nameEdit1"
         app:layout_constraintTop_toBottomOf="@+id/groupSpinner1"
         tools:layout_constraintBaseline_toBaselineOf="@id/textView7" />
 
     <Button
         android:id="@+id/registerButton"
-        android:layout_width="211dp"
-        android:layout_height="68dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="8dp"
         android:onClick="onClickRegisterButton"
@@ -100,12 +106,13 @@
 
     <Button
         android:id="@+id/addGroupButton2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
 
         android:onClick="onClickAddGroupButton"
         android:text="@string/add_group"
         app:layout_constraintBottom_toTopOf="@+id/addPositionButton2"
+        app:layout_constraintEnd_toEndOf="@id/addPositionButton2"
         app:layout_constraintStart_toStartOf="@id/addPositionButton2"
         app:layout_constraintTop_toBottomOf="@id/registerButton"
         tools:layout_constraintBottom_toTopOf="@id/addPositionButton2"
