--- a/app/src/main/res/layout/activity_simple_calculation.xml
+++ b/app/src/main/res/layout/activity_simple_calculation.xml
@@ -11,8 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/total"
+        app:layout_constraintBottom_toTopOf="@+id/discountText1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,8 +37,10 @@
         android:layout_width="54dp"
         android:layout_height="21dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/discount"
+        app:layout_constraintBottom_toTopOf="@+id/amountMemberText1"
         app:layout_constraintEnd_toEndOf="@+id/totalText1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/totalText1" />
@@ -46,20 +50,21 @@
         android:layout_width="80dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="number"
         android:text="0"
-        app:layout_constraintStart_toEndOf="@+id/discountText1"
-        app:layout_constraintTop_toBottomOf="@+id/totalEdit1" />
+        app:layout_constraintBaseline_toBaselineOf="@id/discountText1"
+        app:layout_constraintStart_toEndOf="@+id/discountText1" />
 
     <TextView
         android:id="@+id/amountMemberText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/number_participants"
+        app:layout_constraintBottom_toTopOf="@+id/specialPrice1"
         app:layout_constraintEnd_toEndOf="@+id/totalText1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/discountText1" />
@@ -83,11 +88,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginBottom="91dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/per_member"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/calcButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/specialPrice3" />
 
     <TextView
         android:id="@+id/perMemberView1"
@@ -108,28 +115,28 @@
         android:id="@+id/calcButton"
         android:layout_width="207dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="189dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:onClick="onClickCalcButton1"
         android:text="@string/calculation"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/perMemberView1" />
 
     <EditText
         android:id="@+id/specialPrice1"
         android:layout_width="100dp"
         android:layout_height="45dp"
-        android:layout_alignRight="@id/specialPrice2"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="number"
         android:text="0"
         android:textAlignment="textEnd"
         app:layout_constraintBottom_toTopOf="@+id/specialPrice2"
-        app:layout_constraintEnd_toEndOf="@+id/specialPrice3"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/specialPrice3"
         app:layout_constraintTop_toBottomOf="@+id/amountMemberText1"
         app:layout_constraintVertical_bias="1.0" />
 
@@ -137,21 +144,19 @@
         android:id="@+id/spinner1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
         android:layout_marginBottom="38dp"
         android:entries="@array/specialAccount"
         android:prompt="@string/special"
         android:spinnerMode="dropdown"
         app:layout_constraintBaseline_toBaselineOf="@+id/specialPrice1"
         app:layout_constraintBottom_toTopOf="@+id/spinner2"
-        app:layout_constraintEnd_toEndOf="@id/spinner3"
-        app:layout_constraintStart_toEndOf="@+id/specialPrice1" />
+        app:layout_constraintEnd_toEndOf="@id/spinner3" />
 
     <EditText
         android:id="@+id/numSpecial1"
         android:layout_width="50dp"
         android:layout_height="45dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="27dp"
         android:layout_marginBottom="19dp"
         android:ems="10"
         android:inputType="number"
@@ -165,48 +170,44 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
         android:text="@string/how_to_count_member"
         android:textAlignment="viewStart"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/specialPrice1"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@id/textView3"
-        app:layout_constraintStart_toEndOf="@+id/numSpecial1" />
+        app:layout_constraintStart_toEndOf="@+id/numSpecial1"
+        app:layout_constraintStart_toStartOf="@id/textView3" />
 
     <EditText
         android:id="@+id/specialPrice2"
         android:layout_width="100dp"
         android:layout_height="45dp"
-        android:layout_marginStart="21dp"
-        android:layout_marginBottom="19dp"
         android:ems="10"
         android:inputType="number"
         android:text="0"
         android:textAlignment="textEnd"
         app:layout_constraintBottom_toTopOf="@+id/specialPrice3"
-        app:layout_constraintEnd_toEndOf="@+id/specialPrice3"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/specialPrice3"
+        app:layout_constraintTop_toBottomOf="@+id/specialPrice1" />
 
     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
         android:layout_marginBottom="45dp"
         android:entries="@array/specialAccount"
         android:prompt="@string/special"
         android:spinnerMode="dropdown"
         app:layout_constraintBaseline_toBaselineOf="@+id/specialPrice2"
         app:layout_constraintBottom_toTopOf="@+id/spinner3"
-        app:layout_constraintEnd_toEndOf="@id/spinner3"
-        app:layout_constraintStart_toEndOf="@+id/specialPrice2" />
+        app:layout_constraintEnd_toEndOf="@id/spinner3" />
 
     <EditText
         android:id="@+id/numSpecial2"
         android:layout_width="50dp"
         android:layout_height="45dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="27dp"
         android:layout_marginBottom="19dp"
         android:ems="10"
         android:inputType="number"
@@ -220,50 +221,54 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="38dp"
         android:text="@string/how_to_count_member"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/specialPrice2"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="@id/textView3"
-        app:layout_constraintStart_toEndOf="@+id/numSpecial2" />
+        app:layout_constraintStart_toEndOf="@+id/numSpecial2"
+        app:layout_constraintStart_toStartOf="@id/textView3" />
 
     <EditText
         android:id="@+id/specialPrice3"
         android:layout_width="100dp"
         android:layout_height="45dp"
         android:layout_marginStart="21dp"
-        android:layout_marginBottom="140dp"
+        android:layout_marginBottom="8dp"
         android:inputType="number"
         android:text="0"
         android:textAlignment="textEnd"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/perText1"
+        app:layout_constraintEnd_toStartOf="@+id/spinner3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/specialPrice2" />
 
     <Spinner
         android:id="@+id/spinner3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="150dp"
         android:entries="@array/specialAccount"
         android:prompt="@string/special"
         android:spinnerMode="dropdown"
         app:layout_constraintBaseline_toBaselineOf="@+id/specialPrice3"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/numSpecial3"
         app:layout_constraintStart_toEndOf="@+id/specialPrice3" />
 
     <EditText
         android:id="@+id/numSpecial3"
         android:layout_width="50dp"
         android:layout_height="45dp"
-        android:layout_marginStart="10dp"
         android:layout_marginBottom="76dp"
         android:ems="10"
         android:inputType="number"
         android:text="0"
         app:layout_constraintBaseline_toBaselineOf="@+id/specialPrice3"
         app:layout_constraintBottom_toTopOf="@+id/calcButton"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintStart_toEndOf="@+id/spinner3" />
 
     <TextView
@@ -276,6 +281,7 @@
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@id/specialPrice3"
         app:layout_constraintBottom_toTopOf="@+id/calcButton"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/numSpecial3" />
 
     <TextView
