--- a/app/src/main/res/layout/activity_manage_list.xml
+++ b/app/src/main/res/layout/activity_manage_list.xml
@@ -8,10 +8,15 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="50dp"
         android:text="@string/member_info_manage"
+        android:textAlignment="center"
         android:textSize="26sp"
         app:layout_constraintBottom_toTopOf="@id/memberListButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,20 +25,27 @@
 
     <Button
         android:id="@+id/memberListButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="12dp"
         android:onClick="onClickMemberListButton"
         android:text="@string/member_list"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/addMemberButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView8" />
 
     <Button
         android:id="@+id/addMemberButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
         android:onClick="onClickAddMemberButton"
         android:text="@string/register_member"
         android:textSize="16sp"
@@ -45,8 +57,9 @@
     <Button
         android:id="@+id/groupInfo"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="60dp"
         android:onClick="onClickGroupButton"
         android:text="@string/group_info"
         android:textSize="16sp"
